bugfix: INI&MAP export

--- a/tests/eg.ini
+++ b/tests/eg.ini
@@ -19,3 +19,6 @@ VoiceDoi = CasheenGasp, CasheenMoan
 
 [ExampleInherit]:[ExampleVehicle]
 IsCasheenBurnt=false
+
+[ExampleNullInherit]:[ExampleNull]
+xu = buxv
